<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
                   2017 The LineageOS Project
                   2020-2022 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>

    <!-- App Name -->
    <string name="spotlight_settings_app_name">Spotlight settings</string>
    <string name="spotlight_settings_enable">Spotlight ring</string>
    <string name="spotlight_settings_title">Spotlight</string>
    <string name="spotlight_settings_summary">Spotlight ring options</string>

    <string name="spotlight_settings_brightness">brightness</string>

    <string name="spotlight_settings_charging_title">charging status</string>
    <string name="spotlight_settings_charging_level_title">Battery status</string>
    <string name="spotlight_settings_charging_level_summary">Show battery status when the device is connected to the power supply</string>

    <string name="spotlight_settings_call_title">calls</string>
    <string name="spotlight_settings_call_toggle_title">call animation</string>
    <string name="spotlight_settings_call_toggle_summary">Light signal on incoming call.</string>

    <string name="spotlight_settings_notifs_title">Notifications</string>
    <string name="spotlight_settings_notifs_toggle_title">Message animation</string>
    <string name="spotlight_settings_notifs_toggle_summary">Light signal on unread messages</string>
    <string name="spotlight_settings_notifs_sub_title">Apps to allow</string>
    <string name="spotlight_settings_notifs_sub_toggle_title">Allow mid-illumination animation</string>
    <string name="msg_missing_notification_access">To activate the notification notice, please allow access to system notifications for <xliff:g id="name" example="My App">%1$s</xliff:g></string>
    <string name="title_missing_notification_access">Notification access required</string>
    <string name="title_change_settings">Change settings</string>

    <string name="spotlight_settings_flashlight_toggle_title">flashlight</string>
    <string name="spotlight_settings_flashlight_toggle_summary">Additional light for flash</string>

    <string name="spotlight_settings_music_toggle_title">Music animation</string>
    <string name="spotlight_settings_music_toggle_summary">Pulsating light for music playback</string>

</resources>
