<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2019 The LineageOS Project
                   2020-2022 Paranoid Android

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/spotlight_settings_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="spotlight_enable"
        android:title="@string/spotlight_settings_enable" />

    <SeekBarPreference
        android:key="spotlight_settings_brightness"
        android:max="100"
        android:defaultValue="100"
        android:title="@string/spotlight_settings_brightness" />

    <SwitchPreference
        android:key="spotlight_settings_call_toggle"
        android:defaultValue="true"
        android:title="@string/spotlight_settings_call_toggle_title"
        android:summary="@string/spotlight_settings_call_toggle_summary" />

    <SwitchPreference
        android:key="spotlight_settings_notifs_toggle"
        android:defaultValue="false"
        android:title="@string/spotlight_settings_notifs_toggle_title"
        android:summary="@string/spotlight_settings_notifs_toggle_summary" >
    </SwitchPreference>

    <SwitchPreference
        android:key="spotlight_settings_charging_level"
        android:defaultValue="true"
        android:title="@string/spotlight_settings_charging_level_title"
        android:summary="@string/spotlight_settings_charging_level_summary" />

    <SwitchPreference
        android:key="spotlight_settings_flashlight_toggle"
        android:defaultValue="true"
        android:title="@string/spotlight_settings_flashlight_toggle_title"
        android:summary="@string/spotlight_settings_flashlight_toggle_summary" />

    <SwitchPreference
        android:key="spotlight_settings_music_toggle"
        android:defaultValue="true"
        android:title="@string/spotlight_settings_music_toggle_title"
        android:summary="@string/spotlight_settings_music_toggle_summary" />

</PreferenceScreen>
